--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -25,10 +25,10 @@ Peter Smith,
 Petra Schulz and
 Sven Grawunder.
 
-I also thank my colleagues and friends from the RTG:
+I also thank my colleagues from the Research Training Group:
 Abigail Anne Bimpeh,
 Ahmad Al-Bitar,
-Astrid Goesswein,
+Astrid Gößwein,
 Carolin Reinert,
 Emine Sahingöz,
 Eugenia Greco,
@@ -42,23 +42,63 @@ Sebastian Bredemann,
 Yat Han Lai and
 Yranahan Traoré.
 
+sharing experiences and ideas
 
+The same thanks go to
 Zheng Shen,
 Heidi Klockmann and
 Derya Nuhbalaoglu
 
+sharing experience, always being there
+
+I do not only want to thank you for being good colleagues, but some of you also became friends.
+experience enrich
+great time in frankfurt
+sharing
+different people
+got to know
+climbing
+
 nano-community
+Karen
+Guido
+Michal
+Pavel
+Bartosz
+Lucie
+Maria
+building on such a nice framework to work in (see karen)
+supportive
+nice community
+time in New York
+great environment
 
-stays abroad: penn and brno
-conferences
-people invited in frankfurt
+opportunity to come
+David Embick
+University of Pennsylvania
+nice time
 
-special thanks to pete (advice)
-Thank you for your warm welcome when I first arrived in Frankfurt. Continuous support until the day I handed in this dissertation
+Masyryk University in Brno
+twice
 
-Jan Don, encourage to apply, collaborations besides thesis, thinking about me and mentioning me that opens doors
+ConSOLE XXVI in London,
+The 42nd Penn Linguistics Conference in Philadeplhia,
+GLOW 41 in Budapest,
+28 Colloquium on Generative Grammar in Tarragona,
+On the place of case in grammar (PlaCiG) workshop in Rethymnon,
+Exploring Nanosyntax workshop at the LSA annual meeting in New York
 
-Friends and family for encouragement and distraction
+Leipzig and Göttingen, opportunity to present my work in the colloquia
 
-I thank Frankfurt for giving Jan and me a city to meet in, and
-I thank Jan for taking care of me when writing this book
+
+Special thanks to Peter Smith and Beata Moskal.
+Thank you for your warm welcome when I first arrived in Frankfurt and for the continuous support until the day I handed in this dissertation.
+Pete also thanks for your advice and calming words in your role as my supervisor.
+
+Jan Don, thanks for your encouragement to apply for the position in Frankfurt, for the continuous collaborations besides my thesis and for mentioning my name, which continues to open new doors for me.
+
+To my family and friends in The Netherlands, thank you for not forgetting me, for your visits to Frankfurt and Offenbach and for encouraging and distracting me.
+
+Heit en mem, dankewol dat jim my oanmoedige hawwe om myn eigen paad te gean en foar jim support ûnderweis.
+
+Jan, danke dass du für mich gesorgt hast in meinem Intensivschreibfasen, dass du zugehört hast als ich wieder meine wirren Gedanken mit dir teilen wollte, und dass wir zusammen nach Holland gezogen sind.
