--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -1157,8 +1157,8 @@ To summarize, I decomposed the relative pronoun into three morphemes: \tit{k}, \
 I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is contained in the other one.
 In Chapter \ref{ch:the-basic-idea}, I mentioned that languages have two possible light heads. I also noted that headless relatives in Polish (just like the ones in Modern German) can only be derived from light-headed relatives that are headed by one of these heads. In this section I give arguments that exclude the second light head as a possible light head.
 
-For Modern German, I discussed both possible light heads. I started by discussing a light-headed relative that is attested in Modern German. If the headless relative was derived from this light-headed relative, the deletion would have to be optional. I considered this scenario, and I gave two arguments against it.
-Then I took the light head from the existing light-headed relative as a point of departure, and I modified it in such a way that it is appropriate as a light head for a headless relative in Modern German. I argued that this light head is the head of the light-headed relative that Modern German headless relative are derived from. This light-headed relative does not exist in Modern German, so the deletion of the light head is obligatory.
+For Modern German, I discussed both possible light heads. I started by discussing a light-headed relative that is attested in Modern German. I considered this scenario, and I gave two arguments against it.
+Then I took the light head from the existing light-headed relative as a point of departure, and I modified it in such a way that it is appropriate as a light head for a headless relative in Modern German. I argued that this light head is the head of the light-headed relative that Modern German headless relative are derived from.
 I do the same investigation for Polish, and I reach the same conclusion as I did for Modern German.
 
 In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
@@ -1251,16 +1251,15 @@ The second argument against the existing light-headed relatives being the source
 just as in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
+Just as I did for Modern German, I conclude that Polish headless relatives are not derived from a light-headed relative headed by a demonstrative. I suggest that Polish headless relatives are also derived from light-headed relatives headed by an extra light head.
+
 In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. These are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
-% \footnote{
-% It is also possible that the strong pronoun is syncretic with the extra light head and that the extra light head is actually also spelled out as \tit{jego}/\tit{jemu}. This would mean that the strong extra light head consists of even more than two morphemes. For my proposal, it is important to show that the extra light head consists of at least two morphemes, one of which spells out case features. It works equally well when the non-case part of the structure actually consists of more one morpheme. I continue working out a proposal in which the extra light head is bimorphemic.
-% }
 
 \ex.\label{ex:pol-elhs}
 \a. o-go `\tsc{elh}.\tsc{an}.\tsc{acc}'
 \b. o-mu `\tsc{elh}.\tsc{an}.\tsc{dat}'
 
-As I noted before, these forms do not surface as light heads in a light-headed relative. They do also not surface anywhere else in the language.
+In Polish, these forms do not surface as light heads in a light-headed relative, and they do also not surface anywhere else in the language.
 
 In Chapter \ref{ch:deriving-onlyinternal}, I showed that the relative pronoun contains two features more than the extra light head, namely \tsc{wh} and \tsc{rel}. This means that the functional sequence for the extra light head is as shown in \ref{ex:fseq-elh-rep}.
 
@@ -1479,7 +1478,7 @@ In sum, Polish headless relatives are derived from a light-headed relative with 
 
 \section{Comparing light heads and relative pronouns}\label{sec:comparing-polish}
 
-In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparison for Polish specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
+In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparisons for Polish specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
 I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
