--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1531,7 +1531,7 @@ In sum, Old High German headless relatives can be derived from a light-headed re
 
 \section{Comparing light heads and relative pronouns}\label{sec:comparing-ohg}
 
-In this section, I compare the internal syntax of extra light heads and demonstratives to the internal syntax of relative pronouns in Old High German. This is the worked out version of the comparisons in Section \ref{sec:basic-unrestricted}. What is different here is that I show the comparison for Old High German specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
+In this section, I compare the internal syntax of extra light heads and demonstratives to the internal syntax of relative pronouns in Old High German. This is the worked out version of the comparisons in Section \ref{sec:basic-unrestricted}. What is different here is that I show the comparisons for Old High German specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
 I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both nominative. I show that the grammaticality of the example can be derived by either taking the light-headed relative headed by the extra light head or the light-headed relative headed by the demonstrative as the source of the headless relative.
