--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -1061,3 +1061,13 @@
   pages = {277--304},
   doi = {10.1093/oso/9780190876746.003.0011}
 }
+
+@article{sanfelici2021,
+  title={Relative clauses in the diachrony of Italian},
+  author={Sanfelici, Emanuela and Poletto, Cecilia},
+  journal={Journal of Historical Syntax},
+  volume={5},
+  pages={1--32},
+  year={2021},
+  doi = {10.18148/hs/2021.v5i1-13.32}
+}
